@@ -305,6 +305,7 @@ You can find links to these tutorials and other documentation files below.
 <a href=ref/pygame_time.html#set_timer>pygame.time.set_timer</a> - control timer events<br>
 <a href=ref/pygame_transform.html#flip>pygame.transform.flip</a> - flips a surface on either axis<br>
 <a href=ref/pygame_transform.html#rotate>pygame.transform.rotate</a> - rotate a Surface<br>
+<a href=ref/pygame_transform.html#rotozoom>pygame.transform.rotozoom</a> - smoothly scale and/or rotate an image<br>
 <a href=ref/pygame_transform.html#scale>pygame.transform.scale</a> - scale a Surface to an arbitrary size<br>
 <a href=ref/pygame_version.html#ver>pygame.version.ver</a> - The current pygame version info<br>
 <!--ENDINDEX-->
