@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was crashing
 
+Jun 11, 2001
+	smarter locking with subsurfaces
+	added transform.rotozoom(), which uses builtin SDL_rotozoom
+
 May 31, 2001
 	correctly handle unicode filenames
 
